# sandbox-control-plane

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
deploy/: api-deployment.yaml  api-service.yaml  ingressroute.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  worker-deployment.yaml
docs/: architecture.md
frontend/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CreateSandboxDialog.tsx  Markdown.tsx  SandboxTable.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  chat.ts  personas.ts
frontend/src/pages/: ChatPage.tsx  SandboxesPage.tsx  TerminalPage.tsx
images/opencode/: Dockerfile
sandbox_control_plane/: app.py  worker.py
sandbox_control_plane/core/: config.py  kubernetes.py  temporal.py
sandbox_control_plane/sandboxes/: activities.py  chat.py  fake.py  gateway.py  models.py  router.py  service.py  terminal.py  workflows.py
